scripts/nullaway/nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8.txt
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Pool.java:63: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:228: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:232: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:244: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Hand.java:299: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:40: error: [NullAway] initializer method does not guarantee @NonNull fields mySocket (line 28), inbox (line 30), outbox (line 32) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Client() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
        mySocket = null;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:42: error: [NullAway] assigning @Nullable expression to @NonNull field
        inbox = null;
              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Client.java:43: error: [NullAway] assigning @Nullable expression to @NonNull field
        outbox = null;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:24: error: [NullAway] initializer method does not guarantee @NonNull field game (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HintClient(boolean initialMeldMade) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
        game = null;
             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/HintClient.java:86: error: [NullAway] dereferenced expression hand is @Nullable
            while (hand.getNumTiles() > 0) {
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:148: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java:225: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields client (line 9), game (line 13), hand (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RAIclient(String serverIP, int port) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
            game = null;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/RAIclient.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
            hand = null;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:101: error: [NullAway] initializer method does not guarantee @NonNull fields pool (line 49), hands (line 51), initialMelds (line 53), game (line 55) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Server(int numPlayers) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:39: error: [NullAway] @NonNull static field serverSocket not initialized
    private static ServerSocket serverSocket;
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:102: error: [NullAway] assigning @Nullable expression to @NonNull field
        serverSocket = null;
                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:106: error: [NullAway] assigning @Nullable expression to @NonNull field
        pool = null;
             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:107: error: [NullAway] assigning @Nullable expression to @NonNull field
        hands = null;
              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Server.java:108: error: [NullAway] assigning @Nullable expression to @NonNull field
        game = null;
             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/Move.java:96: error: [NullAway] dereferenced expression endPositions.get(key) is @Nullable
            for (int j = 0; j < endPositions.get(key).size(); j++) {
                                                     ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/url8417b1b213_Ratchette_Rummikub_tgz-pJ8-rummikub_RummikubJ8/src/rummikub/GameInfo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
24 errors
